Fix game options overlapping with chat

--- a/WebContent/cah.css
+++ b/WebContent/cah.css
@@ -423,7 +423,7 @@ span.debug, span.admin {
 
 .custom_decks_list {
   margin-top: 10px;
-  height: 80px;
+  height: 120px;
   width: 100%;
 }
 
